--- a/.github/workflows/streams.yml
+++ b/.github/workflows/streams.yml
@@ -49,6 +49,7 @@ jobs:
             python3 twitch.py verginacy > ../../streams/verginatv_cyprus.m3u8
             python3 twitch.py iviewtvgr > ../../streams/iviewtvgr.m3u8
             python3 twitch.py xylagany_paradosi > ../../streams/xylagany_paradosi.m3u8
+            python3 twitch.py alithiavideo > ../../streams/alithiatv.m3u8
       - name: git add
         run: |
           git add -A
