--- a/.github/workflows/streams.yml
+++ b/.github/workflows/streams.yml
@@ -50,6 +50,8 @@ jobs:
             python3 twitch.py iviewtvgr > ../../streams/iviewtvgr.m3u8
             python3 twitch.py xylagany_paradosi > ../../streams/xylagany_paradosi.m3u8
             python3 twitch.py alithiavideo > ../../streams/alithiatv.m3u8
+            python3 twitch.py hotbeatstv > ../../streams/hotbeatstv.m3u8
+
       - name: git add
         run: |
           git add -A
