--- a/.github/workflows/streams.yml
+++ b/.github/workflows/streams.yml
@@ -51,7 +51,7 @@ jobs:
             python3 twitch.py xylagany_paradosi > ../../streams/xylagany_paradosi.m3u8
             python3 twitch.py alithiavideo > ../../streams/alithiatv.m3u8
             python3 twitch.py hotbeatstv > ../../streams/hotbeatstv.m3u8
-
+            python3 twitch.py extacy_tv > ../../streams/extacytv.m3u8
       - name: git add
         run: |
           git add -A
