--- a/.github/workflows/streams.yml
+++ b/.github/workflows/streams.yml
@@ -25,6 +25,8 @@ jobs:
         run: |
             pwd
             cd ./core/platforms/
+            python3 twitch.py astratv2019 > ../../streams/Astra_TV.m3u8
+            python3 twitch.py astratv2019 > ../../streams/Astra_TV_bup.m3u8
             python3 twitch.py astratv2021 > ../../streams/Astra_TV.m3u8
             python3 twitch.py alithiavideo > ../../streams/alithiatv.m3u8
             python3 twitch.py centertv > ../../streams/centertv.m3u8
