--- a/.github/workflows/streams.yml
+++ b/.github/workflows/streams.yml
@@ -55,6 +55,7 @@ jobs:
             python3 twitch.py verginacy > ../../streams/verginatv_cyprus.m3u8
             python3 twitch.py xtvision > ../../streams/XTV.m3u8
             python3 twitch.py xylagany_paradosi > ../../streams/xylagany_paradosi.m3u8
+            python3 twitch.py zeystv0 > ../../streams/zeystv.m3u8
       - name: git add
         run: |
           git add -A
