--- a/.github/workflows/streams.yml
+++ b/.github/workflows/streams.yml
@@ -44,7 +44,7 @@ jobs:
             python3 twitch.py marontvgr > ../../streams/marontvgr.m3u8
             python3 twitch.py ontv2023 > ../../streams/On_Tv_Greece.m3u8
             python3 twitch.py orthodoxiaradio > ../../streams/Orthodoxia_Radio_TV.m3u8          
-            python3 twitch.py pronewstv > ../../streams/ProNews.m3u8
+            python3 twitch.py pronewstv > ../../streams/pronewstvgr.m3u8
             python3 dailymotion.py k5Hfx6eeaTjBE5zRXcn > ../../streams/Star_Kentrikis_Eladas_Greece.m3u8
             python3 twitch.py superstarfm > ../../streams/superstarfm.m3u8
             python3 twitch.py tvkosmosgr > ../../streams/tvkosmosgr.m3u8
