--- a/.github/workflows/streams.yml
+++ b/.github/workflows/streams.yml
@@ -25,6 +25,7 @@ jobs:
         run: |
             pwd
             cd ./core/platforms/
+            python3 twitch.py 34100tv > ../../streams/34100tv.m3u8
             python3 twitch.py astratv2021 > ../../streams/Astra_TV.m3u8
             python3 twitch.py astratv2019 > ../../streams/Astra_TV_2.m3u8
             python3 twitch.py astratv2021 > ../../streams/Astra_TV.m3u8
