--- a/.github/workflows/streams.yml
+++ b/.github/workflows/streams.yml
@@ -38,7 +38,7 @@ jobs:
             python3 dailymotion.py x2j7kha > ../../streams/Euronews_Greece.m3u8
             python3 twitch.py eurotvgr > ../../streams/EuroTV.m3u8
             python3 twitch.py hotbeatstv > ../../streams/hotbeatstv.m3u8
-            python3 twitch.py flashtvgr > ../../streams/FlashTV.m3u8
+            python3 twitch.py orestidatv > ../../streams/FlashTV.m3u8
             python3 twitch.py iviewtvgr > ../../streams/iviewtvgr.m3u8
             python3 twitch.py kostv2024 > ../../streams/Kardamena_TV.m3u8
             python3 twitch.py lepantotv > ../../streams/LePanto.m3u8
