--- a/.github/workflows/streams.yml
+++ b/.github/workflows/streams.yml
@@ -58,6 +58,8 @@ jobs:
             python3 twitch.py xylagany_paradosi > ../../streams/xylagany_paradosi.m3u8
             python3 twitch.py zeystv0 > ../../streams/zeystv.m3u8
             python3 twitch.py failarmy > ../../streams/failarmy.m3u8
+            python3 twitch.py animals_nature > ../../streams/animals_nature.m3u8
+
       - name: git add
         run: |
           git add -A
