--- a/.github/workflows/streams.yml
+++ b/.github/workflows/streams.yml
@@ -50,7 +50,7 @@ jobs:
             python3 dailymotion.py k5Hfx6eeaTjBE5zRXcn > ../../streams/Star_Kentrikis_Eladas_Greece.m3u8
             python3 twitch.py superstarfm > ../../streams/superstarfm.m3u8
             python3 twitch.py tvkosmosgr > ../../streams/tvkosmosgr.m3u8
-            python3 twitch.py tvrodopi > ../../streams/TVRodopi.m3u8
+            python3 twitch.py rodopitv > ../../streams/TVRodopi.m3u8
             python3 twitch.py topchannelkozani > ../../streams/Top_Channel_Greece.m3u8
             python3 twitch.py livethess > ../../streams/thessaliatv.m3u8
             python3 twitch.py tvstarfm > ../../streams/tvstarfm.m3u8
