--- a/.github/workflows/streams.yml
+++ b/.github/workflows/streams.yml
@@ -40,7 +40,7 @@ jobs:
             python3 twitch.py eurotvgr > ../../streams/EuroTV.m3u8
             python3 twitch.py hotbeatstv > ../../streams/hotbeatstv.m3u8
             python3 twitch.py orestidatv > ../../streams/FlashTV.m3u8
-            python3 twitch.py iviewtvgr > ../../streams/iviewtvgr.m3u8
+            python3 twitch.py iviewtvgr > ../../streams/iview_tv.m3u8
             python3 twitch.py kostv2024 > ../../streams/Kardamena_TV.m3u8
             python3 twitch.py lepantotv > ../../streams/LePanto.m3u8
             python3 twitch.py marontvgr > ../../streams/marontvgr.m3u8
@@ -48,15 +48,15 @@ jobs:
             python3 twitch.py orthodoxiaradio > ../../streams/Orthodoxia_Radio_TV.m3u8          
             python3 twitch.py pronewstvgr > ../../streams/pronewstvgr.m3u8
             python3 dailymotion.py k5Hfx6eeaTjBE5zRXcn > ../../streams/Star_Kentrikis_Eladas_Greece.m3u8
-            python3 twitch.py superstarfm > ../../streams/superstarfm.m3u8
-            python3 twitch.py tvkosmosgr > ../../streams/tvkosmosgr.m3u8
+            python3 twitch.py superstarfm > ../../streams/superstar.m3u8
+            python3 twitch.py tvkosmosgr > ../../streams/tvkosmos.m3u8
             python3 twitch.py rodopitv > ../../streams/TVRodopi.m3u8
-            python3 twitch.py topchannelkozani > ../../streams/Top_Channel_Greece.m3u8
+            python3 twitch.py topchannelkozani > ../../streams/Top_Channel.m3u8
             python3 twitch.py livethess > ../../streams/thessaliatv.m3u8
-            python3 twitch.py tvstarfm > ../../streams/tvstarfm.m3u8
+            python3 twitch.py tvstarfm > ../../streams/tvstar.m3u8
             python3 twitch.py verginacy > ../../streams/verginatv_cyprus.m3u8
             python3 twitch.py xtvision > ../../streams/XTV.m3u8
-            python3 twitch.py xylagany_paradosi > ../../streams/xylagany_paradosi.m3u8
+            python3 twitch.py xylagany_paradosi > ../../streams/xylagany.m3u8
             python3 twitch.py zeystv0 > ../../streams/zeystv.m3u8
             python3 twitch.py failarmy > ../../streams/failarmy.m3u8
             python3 twitch.py animals_nature > ../../streams/animals_nature.m3u8
