--- a/.github/workflows/streams.yml
+++ b/.github/workflows/streams.yml
@@ -52,6 +52,7 @@ jobs:
             python3 twitch.py rodopitv > ../../streams/Rodopi_TV.m3u8
             python3 twitch.py topchannelkozani > ../../streams/Top_Channel.m3u8
             python3 twitch.py livethess > ../../streams/Thessalia_TV.m3u8
+            python3 twitch.py tvctklive > ../../streams/Ctklive_TV.m3u8
             python3 twitch.py tvstarfm > ../../streams/Star_TV.m3u8
             python3 twitch.py verginacy > ../../streams/Verginatv_Cyprus.m3u8
             python3 twitch.py xtvision > ../../streams/XTV.m3u8
