--- a/.github/workflows/streams.yml
+++ b/.github/workflows/streams.yml
@@ -35,6 +35,7 @@ jobs:
             python3 twitch.py diontvkmakedonias > ../../streams/Dion_TV.m3u8
             python3 twitch.py extacy_tv > ../../streams/Extacy_TV.m3u8
             python3 twitch.py extacy_tv_cyprus > ../../streams/Extacy_TV_Cyprus.m3u8
+            python3 twitch.py extratvCyprus > ../../streams/Extra_tv_Cyprus.m3u8          
             python3 dailymotion.py x2j7kha > ../../streams/Euronews_Greece.m3u8
             python3 twitch.py eurotvgr > ../../streams/Euro_TV.m3u8
             python3 twitch.py hotbeatstv > ../../streams/Hotbeats_TV.m3u8
