--- a/.github/workflows/streams.yml
+++ b/.github/workflows/streams.yml
@@ -27,7 +27,7 @@ jobs:
             cd ./core/platforms/
             python3 twitch.py 34100tv > ../../streams/34100 TV.m3u8
             python3 twitch.py alithiavideo > ../../streams/ALITHIA TV.m3u8
-            python3 twitch.py animals_nature > ../../streams/Animals_Nature.m3u8
+            python3 twitch.py animals_nature > ../../streams/ANIMALS NATURE.m3u8
             python3 twitch.py astratv2021 > ../../streams/Astra_TV.m3u8
             python3 twitch.py astratv2019 > ../../streams/Astra_TV_2.m3u8
             python3 twitch.py centertv > ../../streams/Center_TV.m3u8
