--- a/.github/workflows/streams.yml
+++ b/.github/workflows/streams.yml
@@ -28,11 +28,11 @@ jobs:
             python3 twitch.py 34100tv > ../../streams/34100 TV.m3u8
             python3 twitch.py alithiavideo > ../../streams/ALITHIA TV.m3u8
             python3 twitch.py animals_nature > ../../streams/ANIMALS NATURE.m3u8
-            python3 twitch.py astratv2021 > ../../streams/Astra_TV.m3u8
-            python3 twitch.py astratv2019 > ../../streams/Astra_TV_2.m3u8
-            python3 twitch.py centertv > ../../streams/Center_TV.m3u8
+            python3 twitch.py astratv2021 > ../../streams/ASTRA TV.m3u8
+            python3 twitch.py astratv2019 > ../../streams/ASTRA TV_2.m3u8
+            python3 twitch.py centertv > ../../streams/CENTER TV.m3u8
             python3 twitch.py dtpylias > ../../streams/DTP.m3u8
-            python3 twitch.py diabatatv > ../../streams/Diabata_TV.m3u8
+            python3 twitch.py diabatatv > ../../streams/DIABATA TV.m3u8
             python3 twitch.py diontvkmakedonias > ../../streams/Dion_TV.m3u8
             python3 twitch.py eurotvgr > ../../streams/Euro_TV.m3u8
             python3 dailymotion.py x2j7kha > ../../streams/Euronews_Greece.m3u8
