--- a/.github/workflows/streams.yml
+++ b/.github/workflows/streams.yml
@@ -40,7 +40,7 @@ jobs:
             python3 twitch.py extacy_tv_cyprus > ../../streams/Extacy_TV_Cyprus.m3u8
             python3 twitch.py extratvCyprus > ../../streams/Extra_tv_Cyprus.m3u8          
             python3 twitch.py failarmy > ../../streams/Failarmy.m3u8
-            python3 twitch.py hercules1959 > ../../streams/FAROS_ΕΚΚΛΗΣΙΑ.m3u8
+            python3 twitch.py hercules1959 > ../../streams/FAROS_EKKLHSIA.m3u8
             python3 twitch.py orestidatv > ../../streams/Flash_TV.m3u8
             python3 twitch.py hotbeatstv > ../../streams/Hotbeats_TV.m3u8
             python3 twitch.py iviewtvgr > ../../streams/Iview_TV.m3u8
