--- a/.github/workflows/streams.yml
+++ b/.github/workflows/streams.yml
@@ -26,6 +26,7 @@ jobs:
             pwd
             cd ./core/platforms/
             python3 twitch.py 34100tv > ../../streams/34100_TV.m3u8
+            python3 twitch.py alithiavideo > ../../streams/Alithia_TV.m3u8
       - name: git add
         run: |
           git add -A
