--- a/.github/workflows/streams.yml
+++ b/.github/workflows/streams.yml
@@ -27,6 +27,7 @@ jobs:
             cd ./core/platforms/
             python3 twitch.py 34100tv > ../../streams/34100_TV.m3u8
             python3 twitch.py alithiavideo > ../../streams/Alithia_TV.m3u8
+            python3 twitch.py animals_nature > ../../streams/Animals_Nature.m3u8
       - name: git add
         run: |
           git add -A
