--- a/.github/workflows/streams.yml
+++ b/.github/workflows/streams.yml
@@ -48,7 +48,8 @@ jobs:
             python3 twitch.py lepantotv > ../../streams/LePanto_TV.m3u8
             python3 twitch.py marontvgr > ../../streams/Maron_TV.m3u8
             python3 twitch.py ontv2023 > ../../streams/On_TV.m3u8
-            python3 twitch.py orthodoxiaradio > ../../streams/Orthodoxia_TV.m3u8          
+            python3 twitch.py orthodoxiaradio > ../../streams/Orthodoxia_TV.m3u8
+            python3 twitch.py pakoestream > ../../streams/Pakoestream_TV.m3u8
             python3 twitch.py pronewstvgr > ../../streams/Pronews_TV.m3u8
             python3 twitch.py rodopitv > ../../streams/Rodopi_TV.m3u8
             python3 twitch.py tvstarfm > ../../streams/Star_Boreiou_Elladas.m3u8
