--- a/.github/workflows/streams.yml
+++ b/.github/workflows/streams.yml
@@ -55,7 +55,7 @@ jobs:
             python3 twitch.py tvstarfm > ../../streams/Star_Boreiou_Elladas.m3u8
             python3 dailymotion.py k5Hfx6eeaTjBE5zRXcn > ../../streams/Star_Kentrikis_Elladas.m3u8
             python3 twitch.py superstarfm > ../../streams/Superstar_TV.m3u8
-            python3 twitch.py avoidingthehenka > ../../streams/Sumo_TV.m3u8
+            python3 twitch.py midnightsumo > ../../streams/Sumo_TV.m3u8
             python3 twitch.py livethess > ../../streams/Thessalia_TV.m3u8
             python3 twitch.py topchannelkozani > ../../streams/Top_Channel.m3u8
             python3 twitch.py verginacy > ../../streams/Verginatv_Cyprus.m3u8
