--- a/.github/workflows/streams.yml
+++ b/.github/workflows/streams.yml
@@ -50,6 +50,7 @@ jobs:
             python3 twitch.py ontv2023 > ../../streams/On_TV.m3u8
             python3 twitch.py orthodoxiaradio > ../../streams/Orthodoxia_TV.m3u8
             python3 twitch.py pakoestream > ../../streams/Pakoestream_TV.m3u8
+            python3 twitch.py zeystv0 > ../../streams/Pluton.m3u8
             python3 twitch.py pronewstvgr > ../../streams/Pronews_TV.m3u8
             python3 twitch.py rodopitv > ../../streams/Rodopi_TV.m3u8
             python3 twitch.py tvstarfm > ../../streams/Star_Boreiou_Elladas.m3u8
@@ -60,7 +61,6 @@ jobs:
             python3 twitch.py verginacy > ../../streams/Verginatv_Cyprus.m3u8
             python3 twitch.py xtvision > ../../streams/XTV.m3u8
             python3 twitch.py xylagany_paradosi > ../../streams/Xylagany.m3u8
-            python3 twitch.py zeystv0 > ../../streams/Zeys_TV.m3u8
 
       - name: git add
         run: |
