--- a/.github/workflows/streams.yml
+++ b/.github/workflows/streams.yml
@@ -62,6 +62,7 @@ jobs:
             python3 twitch.py xtvision > ../../streams/XTV.m3u8
             python3 twitch.py xylagany_paradosi > ../../streams/Xylagany.m3u8
             python3 twitch.py zeystv0 > ../../streams/Zeys_TV.m3u8
+            python3 twitch.py zeystv > ../../streams/Zeys_TV.m3u8
 
       - name: git add
         run: |
