--- a/.github/workflows/streams.yml
+++ b/.github/workflows/streams.yml
@@ -33,7 +33,7 @@ jobs:
             python3 twitch.py centertv > ../../streams/Center_TV.m3u8
             python3 twitch.py dtpylias > ../../streams/DTP.m3u8
             python3 twitch.py diabatatv > ../../streams/Diabata_TV.m3u8
-            python3 twitch.py diontvkmakedonias > ../../streams/Dion_TV.m3u8
+            python3 twitch.py diontv2024 > ../../streams/Dion_TV.m3u8
             python3 twitch.py eurotvgr > ../../streams/Euro_TV.m3u8
             python3 dailymotion.py x2j7kha > ../../streams/Euronews_Greece.m3u8
             python3 twitch.py extacy_tv > ../../streams/Extacy_TV.m3u8
