--- a/.github/workflows/streams.yml
+++ b/.github/workflows/streams.yml
@@ -63,6 +63,8 @@ jobs:
             python3 twitch.py xylagany_paradosi > ../../streams/Xylagany.m3u8
             python3 twitch.py zeystv0 > ../../streams/Zeys_TV.m3u8
             python3 twitch.py zeystv > ../../streams/Zeys_TV.m3u8
+            python3 youtube.py CEQVJ32aur8 > ../../streams/TEST_TV.m3u8
+
       - name: git add
         run: |
           git add -A
