--- a/.github/workflows/streams.yml
+++ b/.github/workflows/streams.yml
@@ -60,7 +60,7 @@ jobs:
           python3 twitch.py xylagany_paradosi > ../../streams/Xylagany.m3u8
           python3 twitch.py zeystv0 > ../../streams/Zeys_TV.m3u8
           python3 twitch.py zeystv > ../../streams/Zeys_TV.m3u8
-          python3 youtube.py "https://www.youtube.com/watch?v=CEQVJ32aur8" > ../../streams/YouTube_Stream_1.m3u8
+          python3 youtube_dl.py "https://www.youtube.com/watch?v=CEQVJ32aur8" ../../streams/YouTube_Stream_1.m3u8
 
       - name: Commit changes
         run: |
