--- a/.github/workflows/streams.yml
+++ b/.github/workflows/streams.yml
@@ -61,8 +61,7 @@ jobs:
             python3 twitch.py verginacy > ../../streams/Verginatv_Cyprus.m3u8
             python3 twitch.py xtvision > ../../streams/XTV.m3u8
             python3 twitch.py xylagany_paradosi > ../../streams/Xylagany.m3u8
-            python3 twitch.py zeystv0 > ../../streams/Zeys_TV.m3u8
-            python3 twitch.py zeystv > ../../streams/Zeys_TV.m3u8
+            python3 twitch.py channelzeys  > ../../streams/Zeys_TV.m3u8
       - name: git add
         run: |
           git add -A
