--- a/.github/workflows/streams.yml
+++ b/.github/workflows/streams.yml
@@ -45,7 +45,7 @@ jobs:
             python3 twitch.py iviewtvgr > ../../streams/Iview_TV.m3u8
             python3 twitch.py kostv2024 > ../../streams/Kos_TV.m3u8
             python3 twitch.py tvkosmosgr > ../../streams/Kosmos_TV.m3u8
-            python3 twitch.py lepantotv > ../../streams/LePanto_TV.m3u8
+            python3 twitch.py lepantotv2 > ../../streams/LePanto_TV.m3u8
             python3 twitch.py maron_tv > ../../streams/Maron_TV.m3u8
             python3 twitch.py ontv2023 > ../../streams/On_TV.m3u8
             python3 twitch.py orthodoxiaradio > ../../streams/Orthodoxia_TV.m3u8
